examples/good/06-Functions.tms
boolean functionA(boolean b) {
  return !b;
}

void functionB(int i) {
  i++;
  return;
}

int functionC(int i) {
  functionB(i);
  return i * i;
}

void main() {

  int z = 3;
  if (functionA(false)) {
    z = functionC(z);
    printInt(z);
    printBool(z == 9);
  }

  return;
}