examples/bad/06-WrongNoArgs.tms
int fun(int x, int y, int z) {
  return x+y+z;
}

void main() {
  int l = fun(5, 10);
  return;
}